kiosworddatadir = $(kde_datadir)/kio_sword
kiosworddata_DATA = kio_sword.css \
	border_l.png \
	border_r.png \
	footer_bl.png \
	footer_b.png \
	footer_br.png \
	footer_sword.png \
	header_caption.png \
	header_tl.png \
	header_t.png \
	header_tr.png \
	sword1.png

EXTRA_DIST = $(kiosworddata_DATA)
